CVS-20090513
+ [MPI] fixed a bug that ended in an endless loop if an error was
  encountered before the first broadcast
+ the radial distribution output now states how many functions it contains
+ [APOT] the plotapot script now reads how many rad. dist. there are
+ [APOT] fixed a bug with potentials not using _sc
+ replaced end{force,energy,stress} by output_prefix
  the files "output_prefix".{force,energy,stress,rho_loc,punish} will be written if present
  else the output will be redirected to stdout
+ the force file now shows the atomtype

CVS-20090421
+ [APOT] fixed parameters (pmin==pmax) are now really fixed
+ [APOT] lots of eam bugs fixed

CVS-20090414
+ [APOT] first (working) EAM implementation - needs lots of testing
+ [APOT] don't use rcut
+ [APOT] always enable -DNORESCALE (only important for EAM)

CVS-20090408
+ [APOT] update compnodes script with -n option (only shows compnodes)
+ [APOT] add makeapot script to generate analytic potential files easily
+ add option to write energy output to file (endenergy)
+ potfit now reads the comments from the vasp2force.sh script and
  assigns the names to the potentials
+ [APOT] update "_" detection for potentials
+ fix mindist for ntypes > 2
+ vasp2force.sh does not need POSCAR anymore, it's optional now
+ added pot_index to iterate through potentials
+ [APOT] fix bug with disable_cp ending up in an infinite loop
+ [APOT] added MPI-parallelisation

CVS-20090312
+ [APOT] composition nodes were completely broken, fix that
+ [APOT] compnodes utility to calculate some composition nodes

CVS-20090306
+ output for stress can now be written to a file as well
+ [APOT] fixed potentials without _sc option
+ [APOT] added composition nodes to chemical potentials (only 2d)

CVS-20090216
+ fix rms error for energy-weight
+ [APOT] only write new potential after step adjustment
+ [APOT] the first step of a newly read potential was always wrong
+ don't write end_pot if there was no optimization
+ some cleanup for the error output